

CREATE TYPE role_enum AS ENUM ('Admin', 'Manager', 'Worker');


CREATE TABLE IF NOT EXISTS users (
    user_id SERIAL PRIMARY KEY,
    username VARCHAR(50) NOT NULL UNIQUE,
    password_hash VARCHAR(200) NOT NULL,
    role_name role_enum NOT NULL,
    first_name VARCHAR(50) NOT NULL,
    second_name VARCHAR(50),
    birthday_date DATE,
    email VARCHAR(100) UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS projects(
    project_id SERIAL PRIMARY KEY,
    project_name VARCHAR(100) NOT NULL,
    description TEXT,
    start_date DATE NOT NULL,
    end_date DATE,
    manager_id INTEGER NOT NULL,  -- Project Manager (or Team Lead)
    FOREIGN KEY (manager_id) REFERENCES users(user_id)
);

CREATE TABLE IF NOT EXISTS tasks(
    task_id SERIAL PRIMARY KEY,
    task_name VARCHAR(100) NOT NULL,
    task_description TEXT,
    deadline DATE,
    status VARCHAR(50) DEFAULT 'Pending', -- 'Pending', 'In Progress', 'Completed'
    project_id INTEGER NOT NULL,
    assigned_to INTEGER NOT NULL,  -- Worker/Employee assigned to this task
    FOREIGN KEY (project_id) REFERENCES projects(project_id),
    FOREIGN KEY (assigned_to) REFERENCES users(user_id)
);

CREATE TABLE IF NOT EXISTS events(
    event_id SERIAL PRIMARY KEY,    
    event_name VARCHAR(100) NOT NULL,
    event_description TEXT,
    event_date DATE NOT NULL,
    requested_by INTEGER NOT NULL,  -- User who requests the event booking
    approved_by INTEGER,            -- Manager/Admin who approves it
    FOREIGN KEY (requested_by) REFERENCES users(user_id),
    FOREIGN KEY (approved_by) REFERENCES users(user_id)
);

CREATE TABLE IF NOT EXISTS schedules(
    schedule_id SERIAL PRIMARY KEY,
    user_id INTEGER NOT NULL,
    event_id INTEGER,
    project_id INTEGER,
    schedule_date DATE NOT NULL,
    description TEXT,
    FOREIGN KEY (user_id) REFERENCES users(user_id),
    FOREIGN KEY (event_id) REFERENCES events(event_id),
    FOREIGN KEY (project_id) REFERENCES projects(project_id)
);
CREATE TABLE IF NOT EXISTS password_reset_tokens (
    token VARCHAR(36) PRIMARY KEY,
    user_id INTEGER REFERENCES users(user_id),
    expires_at TIMESTAMP NOT NULL,
    used BOOLEAN DEFAULT FALSE
);